@@ -1,5 +1,11 @@
 2008-10-28  Richard Hult  <richard@imendio.com>
 
+	* src/dh-window.c: Clean up a bit, make the html view/content tab
+	syncing work again, don't make the notebook tabs expand, remove
+	unused code.
+
+2008-10-28  Richard Hult  <richard@imendio.com>
+
 	Bug 557795 – Add assistant/search plugin for VIM
 
 	* misc/devhelp.vim: Add new, much improved version from Jannis
